Quick View: Prevent Scrollbars from appearing on product image

--- a/sass/woocommerce/_quickview.scss
+++ b/sass/woocommerce/_quickview.scss
@@ -56,7 +56,7 @@ a.product-quick-view-button {
 			border-radius: 0;
 			margin: 0;
 			max-height: 500px;
-			overflow-y: hidden;
+			overflow: hidden;
 			
 			img {
 				max-height: 500px;
