--- a/woocommerce.css
+++ b/woocommerce.css
@@ -1703,7 +1703,7 @@ a.product-quick-view-button {
     border-radius: 0;
     margin: 0;
     max-height: 500px;
-    overflow-y: hidden; }
+    overflow: hidden; }
     #quick-view-container .product-content-wrapper .flexslider img {
       max-height: 500px; }
   #quick-view-container .product-content-wrapper .product-image-wrapper {
